--- a/index.html
+++ b/index.html
@@ -31,24 +31,25 @@
 <body>
 	<header>
 		<div id="headerBox">
-			<p class="titleLeft">I L <span class="titleRight">VE TENNIS</span></p>
+			<p class="topTitle">TENNIS</p>
+			<p class="titleLeft">RANKIN<span class="titleRight">GS</span></p>
 			<img class="imgballetennis" src="img/balletennis.png">
 		</div>
 	</header>
 	<div id="containerFirstPart">
 		<div id="contentFirstPart">
-			<h2 class="sousTexte">Lorem ipsum dolor sit amet elit ?</h2>
-			<p class="sousTexte2">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut </p>
-			<p class="sousTexte2">enim ad minim veniam, quis nostrud exercitation</p>
-			<p class="sousTexte2">ullamco laboris nisi ut aliquip ex ea commodo</p>
-			<p class="sousTexte2">consequat.</p>
+			<h2 class="sousTexte">All you need to know on Tennis</h2>
+			<p class="sousTexte2">Tennis ranking show you a lot of information</p>
+			<p class="sousTexte2">related to tennis players and allow the</p>
+			<p class="sousTexte2">most comprehensive tennis data for</p>
+			<p class="sousTexte2">tennis fans.</p>
 		</div>
 
 		<div id="allButton">
-			<a href="#containerSecondPart" style='text-decoration:none;'><div id="buttonWimbledon"><p class="wimb">décompte wimbledon</p></div></a><a href="#containerThirdPart" style='text-decoration:none;'><div id="buttonStatistiques"><p class="stat">Statistiques des joueurs</p></div></a>
+			<a href="#containerSecondPart" style='text-decoration:none;'><div id="buttonWimbledon"><p class="wimb">WIMBLEDON COUNT</p></div></a><a href="#containerThirdPart" style='text-decoration:none;'><div id="buttonStatistiques"><p class="stat">PLAYERS’STATS</p></div></a>
 		</div>
 	<img id="courttennis" src="img/terraintennis.png">
-	<video class="terraintennis" autoplay="true" style="margin-top:-1px;">
+	<video class="terraintennis" loop='true' autoplay="true" style="margin-top:-1px;">
 	  <source src="img/video/intro.mp4" type="video/mp4" />
 	  <source src="img/video/intro.webm" type="video/webm" />
 	   <source src="img/video/intro.ogv" type="video/ogg" />
@@ -59,10 +60,10 @@
 
 	<div id="containerSecondPart">
 		<div id="contentSecondPart">
-			<p class="titleSecondPart">WINBLEDON Championships 2013</p>
-			<p class="sousTexteSecondPart topSecondPart">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut </p>
-			<p class="sousTexteSecondPart">enim ad minim veniam, quis nostrud exercitation</p>
-			<p class="sousTexteSecondPart">ullamco laboris nisi ut aliquip.</p>
+			<p class="titleSecondPart">WINBLEDON CHAMPIONSHIPS 2013</p>
+			<p class="sousTexteSecondPart topSecondPart">The oldest and most pretisigious tennis tournament in the </p>
+			<p class="sousTexteSecondPart">world, held in London, will began in a few days. </p>
+			<p class="sousTexteSecondPart">Don’t miss it. </p>
 			<div class="ligne"></div>
 			<p class="timeSecondPart">Time before the first match</p>
 		</div>
@@ -81,40 +82,40 @@
 	</div>
 	<div id="containerThirdPart">
 		<div id="contentThirdPart">
-			<h1 class="titleThirdPart">CHOISI TON JOUEUR CLASSÉ DANS LE TOP 10</h1>
-			<p class="textThirPart">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<h1 class="titleThirdPart">THE 10 BEST TENNIS PLAYERS</h1>
+			<p class="textThirPart">They are in the TOP 10 and this is not by chance. Look at their performance and you will understand.</p>
 			<img id="lueurThirdPart" src="img/lueur.png">
 
 			<div id="slider-three">
 				 <div>
-					<img id="imgDjoko" src="img/1_Novak_DJOKOVIC.png"  alt="" />
+					<a href="index.html?Djokovic"><img id="imgDjoko" src="img/1_Novak_DJOKOVIC.png"  alt="" /></a>
   				</div>
   				<div>
-					<img id="imgdada" src="img/2_Andy_MURRAY.png" alt="" />
+					<a href="index.html?Murray"><img id="imgdada" src="img/2_Andy_MURRAY.png" alt="" /></a>
   				</div>
   				<div>
-					<img id="imgFederer" src="img/3_Roger_FEDERER.png" alt="" />
+					<a href="index.html?Federrer"><img id="imgFederer" src="img/3_Roger_FEDERER.png" alt="" /></a>
   				</div>
   				<div>
-					<img id="imgNadal" src="img/4_Rafael_NADAL.png" alt="" />
+					<a href="index.html?Nadal"><img id="imgNadal" src="img/4_Rafael_NADAL.png" alt="" /></a>
   				</div>
    				<div>
-					<img id="imgFerrer"  src="img/5_David_FERRER.png" alt="" />
+					<a href="index.html?Ferrer"><img id="imgFerrer"  src="img/5_David_FERRER.png" alt="" /></a>
   				</div>
    				<div>
-					<img id="imgBerdych"  src="img/6_Tomas_BERDYCH.png" alt="" />
+					<a href="index.html?Berdych"><img id="imgBerdych"  src="img/6_Tomas_BERDYCH.png" alt="" /></a>
   				</div>
   				<div>
-					<img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" />
+					<a href="index.html?Potro"><img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" /></a>
   				</div>
    				<div>
-					<img id="imgTsonga" src="img/8_Jo-Wilfried_TSONGA.png" alt="" />
+					<a href="index.html?Tsonga"><img id="imgTsonga" src="img/8_Jo-Wilfried_TSONGA.png" alt="" /></a>
   				</div>
    				<div>
-					<img id="imgGasquet"   src="img/9_Richard_GASQUET.png" alt="" />
+					<a href="index.html?Gasquet"><img id="imgGasquet"   src="img/9_Richard_GASQUET.png" alt="" /></a>
   				</div>
    				<div>
-					<img id="imgWawrinka" src="img/10_Stanislas_WAWRINKA.png" alt="" />
+					<a href="index.html?Wawrinka"><img id="imgWawrinka" src="img/10_Stanislas_WAWRINKA.png" alt="" /></a>
   				</div> 				
 
 			</div>
@@ -156,23 +157,26 @@
 
 	<div id="containerFourPart">
 		<div id="contentFourPart">
-			<h1 class="titleFourPart">OU RECHERCHE LE JOUEUR DE TON CHOIX</h1>
-			<form action="test" method="post" id="buttonFourPart">
-				<input type="text" id="inputText" placeholder="Entrer le nom d'un joueur" onkeyup="changeImg();" value="">
+			<h1 class="titleFourPart">Find your player </h1>
+			<form action="#containerFourPart" method="post" id="buttonFourPart">
+				<input type="text" id="inputText" placeholder="Enter the name of the player" onkeyup="changeImg();" value="">
 				<input type="submit"  disabled="disabled" value="" id="submit" style="background-image:url(img/search.png);background-repeat:no-repeat;  background-position:6px;background-position:mar " onclick="changeUrl();">
 			</form>
 			<div id="imgFourPart">
 				<img id="changeImgPlayer" src="img/player/joueur_inconnu.png" >
 			</div>
-			<p id='changeNamePlayer' class="playerNameFourPart">Joueur inconnu</p>
+			<p id='changeNamePlayer' class="playerNameFourPart">Unknow player</p>
 			<div id="buttonAnalysePerformances" >
-				<a href="#" onclick="changeUrl()" id="buttonAnalysePerf" style="text-decoration:none;" ><p class="analysePerformances" >ANALYSER SES PERFORMANCES</p></a>
+				<a href="#containerFourPart" onclick="changeUrl()" id="buttonAnalysePerf" style="text-decoration:none;" ><p class="analysePerformances" >Analyze performance</p></a>
 			</div>
 		</div>
-	
-
 	</div>
-	<!-- Slider -->
+	<footer>
+		<div id="containerFooter">
+			<p class="copyright">Copyright © 2013 </p>
+			<p class="teamName">Al-Tabbal / Bonvallet / Cazin / Denis / Gallissot / <a class="linkName" href="http://agathelebon.com" target="bank">Lebon</a></p>
+		</div>
+	</footer>
 
 </body>
 </html>
