--- a/webapp.html
+++ b/webapp.html
@@ -55,85 +55,168 @@
 				</ul>
 			</nav>
 			<section id="resume2013">
+				<div>
+					<h3>Win / Defeat</h3>
+					<p>Win</p>
+					<p>Lost</p>
 					<div>
-						<h3>Victoire / D&eacute;faites</h3>
-						<p>Gagn&eacute;</p>
-						<p>Perdu</p>
 						<div>
-							<div>
-								<div class="statsBarConatiner">
-									<p>Tous</p>
-									<div class="tous statsBar" data-gagner="120" data-perdu="36">
-									</div>
-								</div>
-								<div class="statsBarConatiner">
-									<p>Grand Chelem</p>
-									<div class="grdchelem statsBar" data-gagner="250" data-perdu="10">
-									</div>
-								</div>
-								<div class="statsBarConatiner">
-									<p>Masters 1000</p>
-									<div class="masters1000 statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							<div class="statsBarContainer">
+								<p>All</p>
+								<div class="tous statsBar" data-gagner="120" data-perdu="36">
 								</div>
 							</div>
-							<div>
-								<div class="statsBarConatiner">
-									<p>Tie Breaks</p>
-									<div class="tieBreaks statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							<div class="statsBarContainer">
+								<p>Grand Chelem</p>
+								<div class="grdchelem statsBar" data-gagner="250" data-perdu="10">
 								</div>
-								<div class="statsBarConatiner">
-									<p>Contre un top 10</p>
-									<div class="vsTop10 statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>Masters 1000</p>
+								<div class="masters1000 statsBar" data-gagner="80" data-perdu="80">
 								</div>
-								<div class="statsBarConatiner">
-									<p>Dernier set</p>
-									<div class="dernierSet statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							</div>
+						</div>
+						<div>
+							<div class="statsBarContainer">
+								<p>Tie Breaks</p>
+								<div class="tieBreaks statsBar" data-gagner="80" data-perdu="80">
 								</div>
-								<div class="statsBarConatiner">
-									<p>Apr&egrave;s avoir gagner le 1er set</p>
-									<div class="afterWin1Set statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>Against a top 10</p>
+								<div class="vsTop10 statsBar" data-gagner="80" data-perdu="80">
 								</div>
-								<div class="statsBarConatiner">
-									<p>Apr&egrave;s avoir perdu le 1er set</p>
-									<div class="afterLost1Set statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>Last set</p>
+								<div class="dernierSet statsBar" data-gagner="80" data-perdu="80">
 								</div>
-								<div class="statsBarConatiner">
-									<p>Contre un droitier</p>
-									<div class="vsDroitier statsBar" data-gagner="80" data-perdu="80">
-									</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>After winning the first set</p>
+								<div class="afterWin1Set statsBar" data-gagner="80" data-perdu="80">
 								</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>After losing the first set</p>
+								<div class="afterLost1Set statsBar" data-gagner="80" data-perdu="80">
+								</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>Against a right-handed</p>
+								<div class="vsDroitier statsBar" data-gagner="80" data-perdu="80">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<h3>Surface</h3>
+					<div class="surface">
+						<img src="img/terrainDur.png"/>
+						<div></div>
+						<div class="statsRounded dur" data-pourcent="30"></div>
+					</div>
+					<div class="surface">
+						<img src="img/terrainClay.png"/>
+						<div class="left"></div>
+						<div class="statsRounded clay" data-pourcent="60"></div>
+					</div>
+					<div class="surface">
+						<img src="img/terrainGrass.png"/>
+						<div></div>
+						<div class="statsRounded grass" data-pourcent="75"></div>
+					</div>
+				</div>
+				<div class="scrollbar">
+					<div>
+					</div>
+				</div>
+			</section>
+			<section id="resumeCarriere">
+				<div>
+					<div>
+						<p>Best Ranking</p>
+						<h1>#1</h1>
+					</div>
+					<div>
+						<h3>Win / Defeat</h3>
+						<p>Win</p>
+						<p>Lost</p>
+						<div>
+							<div class="statsBarContainer">
+								<p>All</p>
+								<div class="tous statsBar" data-gagner="120" data-perdu="36">
+								</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>Grand Chelem</p>
+								<div class="grdchelem statsBar" data-gagner="250" data-perdu="10">
+								</div>
+							</div>
+							<div class="statsBarContainer">
+								<p>Masters 1000</p>
+								<div class="masters1000 statsBar" data-gagner="80" data-perdu="80">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="statsBarContainer">
+							<p>Tie Breaks</p>
+							<div class="tieBreaks statsBar" data-gagner="80" data-perdu="80">
+							</div>
+						</div>
+						<div class="statsBarContainer">
+							<p>Against a top 10</p>
+							<div class="vsTop10 statsBar" data-gagner="80" data-perdu="80">
+							</div>
+						</div>
+						<div class="statsBarContainer">
+							<p>Last set</p>
+							<div class="dernierSet statsBar" data-gagner="80" data-perdu="80">
+							</div>
+						</div>
+						<div class="statsBarContainer">
+							<p>After winning the first set</p>
+							<div class="afterWin1Set statsBar" data-gagner="80" data-perdu="80">
+							</div>
+						</div>
+						<div class="statsBarContainer">
+							<p>After losing the first set</p>
+							<div class="afterLost1Set statsBar" data-gagner="80" data-perdu="80">
+							</div>
+						</div>
+						<div class="statsBarContainer">
+							<p>Against a right-handed</p>
+							<div class="vsDroitier statsBar" data-gagner="80" data-perdu="80">
 							</div>
 						</div>
 					</div>
 					<div>
 						<h3>Surface</h3>
-						<div>
+						<div class="surface">
 							<img src="img/terrainDur.png"/>
 							<div></div>
 							<div class="statsRounded dur" data-pourcent="30"></div>
 						</div>
-						<div>
+						<div class="surface">
 							<img src="img/terrainClay.png"/>
 							<div class="left"></div>
 							<div class="statsRounded clay" data-pourcent="60"></div>
 						</div>
-						<div>
+						<div class="surface">
 							<img src="img/terrainGrass.png"/>
 							<div></div>
 							<div class="statsRounded grass" data-pourcent="75"></div>
 						</div>
 					</div>
-				<div class="scrollbar">
-					<div></div>
 				</div>
-			</section>
-			<section id="resumeCarriere">
+				<div class="scrollbar">
+					<div>
+					</div>
+				</div>
 			</section>
 			<section id="titres">
 			</section>
