--- a/webapp.html
+++ b/webapp.html
@@ -219,6 +219,40 @@
 				</div>
 			</section>
 			<section id="titres">
+				<div>
+					<nav>
+						<ul>
+							<li class="focus">Carriere</li>
+							<li>2013</li>
+							<li>2012</li>
+							<li>2011</li>
+							<li>2010</li>
+							<li>2009</li>
+						</ul>
+					</nav>
+					<div id="mapTitre"></div>
+				</div>
+				<div>
+					<h3>6 titres</h3>
+				</div>
+				<div>
+					<h3>Surface</h3>
+					<div class="surface">
+						<img src="img/terrainDur.png"/>
+						<div></div>
+						<div class="statsRounded dur" data-pourcent="30"></div>
+					</div>
+					<div class="surface">
+						<img src="img/terrainClay.png"/>
+						<div class="left"></div>
+						<div class="statsRounded clay" data-pourcent="60"></div>
+					</div>
+					<div class="surface">
+						<img src="img/terrainGrass.png"/>
+						<div></div>
+						<div class="statsRounded grass" data-pourcent="75"></div>
+					</div>
+				</div>
 			</section>
 			<section id="finales">
 			</section>
