--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 	</header>
 	<div id="containerFirstPart">
 		<div id="contentFirstPart">
-			<h2 class="sousTexte">All you need to know on Tennis</h2>
-			<p class="sousTexte2">Tennis ranking show you a lot of information</p>
-			<p class="sousTexte2">related to tennis players and allow the</p>
+			<h2 class="sousTexte">All you need to know about Tennis !</h2>
+			<p class="sousTexte2">Tennis ranking show you a lot of informations</p>
+			<p class="sousTexte2">relating tennis players and allow the</p>
 			<p class="sousTexte2">most comprehensive tennis data for</p>
 			<p class="sousTexte2">tennis fans.</p>
 		</div>
 
 		<div id="allButton">
-			<a href="#containerSecondPart" style='text-decoration:none;'><div id="buttonWimbledon"><p class="wimb">WIMBLEDON COUNT</p></div></a><a href="#containerThirdPart" style='text-decoration:none;'><div id="buttonStatistiques"><p class="stat">PLAYERS’STATS</p></div></a>
+			<a href="#containerSecondPart" style='text-decoration:none;'><div id="buttonWimbledon"><p class="wimb">WIMBLEDON COUNTDOWN</p></div></a><a href="#containerThirdPart" style='text-decoration:none;'><div id="buttonStatistiques"><p class="stat">PLAYERS'S STATS</p></div></a>
 		</div>
 	<img id="courttennis" src="img/terraintennis.png">
 	<video class="terraintennis" loop='true' autoplay="true" style="margin-top:-1px;">
@@ -61,9 +61,9 @@
 	<div id="containerSecondPart">
 		<div id="contentSecondPart">
 			<p class="titleSecondPart">WINBLEDON CHAMPIONSHIPS 2013</p>
-			<p class="sousTexteSecondPart topSecondPart">The oldest and most pretisigious tennis tournament in the </p>
-			<p class="sousTexteSecondPart">world, held in London, will began in a few days. </p>
-			<p class="sousTexteSecondPart">Don’t miss it. </p>
+			<p class="sousTexteSecondPart topSecondPart">The oldest and most prestigious tennis tournament of the</p>
+			<p class="sousTexteSecondPart"> world, based in London, will began in a few days.</p>
+			<p class="sousTexteSecondPart">Don’t miss it.</p>
 			<div class="ligne"></div>
 			<p class="timeSecondPart">Time before the first match</p>
 		</div>
@@ -157,7 +157,7 @@
 
 	<div id="containerFourPart">
 		<div id="contentFourPart">
-			<h1 class="titleFourPart">Find your player </h1>
+			<h1 class="titleFourPart">Find your tennis player</h1>
 			<form action="#containerFourPart" method="post" id="buttonFourPart">
 				<input type="text" id="inputText" placeholder="Enter the name of the player" onkeyup="changeImg();" value="">
 				<input type="submit"  disabled="disabled" value="" id="submit" style="background-image:url(img/search.png);background-repeat:no-repeat;  background-position:6px;background-position:mar " onclick="changeUrl();">
@@ -166,15 +166,19 @@
 				<img id="changeImgPlayer" src="img/player/joueur_inconnu.png" >
 			</div>
 			<p id='changeNamePlayer' class="playerNameFourPart">Unknow player</p>
-			<div id="buttonAnalysePerformances" >
-				<a href="#containerFourPart" onclick="changeUrl()" id="buttonAnalysePerf" style="text-decoration:none;" ><p class="analysePerformances" >Analyze performance</p></a>
-			</div>
+			<a href="#containerFourPart" onclick="changeUrl()" id="buttonAnalysePerf" style="text-decoration:none;" >
+				<div id="buttonAnalysePerformances" >
+					<p class="analysePerformances" >Analyze their performance
+					</p>
+				</div>
+			</a>
 		</div>
 	</div>
 	<footer>
 		<div id="containerFooter">
 			<p class="copyright">Copyright © 2013 </p>
-			<p class="teamName">Al-Tabbal / Bonvallet / Cazin / Denis / Gallissot / <a class="linkName" href="http://agathelebon.com" target="bank">Lebon</a></p>
+			<p class="teamName">
+				<a class="linkName" href="http://fr.linkedin.com/in/leaaltabbal" target="bank">Al-Tabbal</a> / <a class="linkName" href="http://bonvalletromain.com/" target="bank">Bonvallet</a> / <a class="linkName" href="http://cazingaultier.com" target="bank">Cazin</a> / <a class="linkName" href="http://denis-leo.com" target="bank">Denis</a> / <a class="linkName" href="http://aymeric.io" target="bank">Gallissot</a> / <a class="linkName" href="http://agathelebon.com" target="bank">Lebon</a></p>
 		</div>
 	</footer>
 
