--- a/webapp.html
+++ b/webapp.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/resetG.css">
 	<link rel="stylesheet" type="text/css" href="css/webapp.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -348,7 +349,7 @@
 					</div>
 					<div>
 						<h3>Opportunite de balle de break</h3>
-						<h1>321</h1>
+						<h1 id="break">321</h1>
 					</div>
 					<div>
 						<h3>Convertion de balle de break</h3>
@@ -356,11 +357,11 @@
 					</div>
 					<div>
 						<h3>Nombre de jeu retourner</h3>
-						<h1>321</h1>
+						<h1 id="returnGame">321</h1>
 					</div>
 					<div>
 						<h3>Nombre de jeu retourner</h3>
-						<h1>321</h1>
+						<h1 id="returnGame2">321</h1>
 					</div>
 					<div>
 						<h3>Point retourne et gagne</h3>
@@ -372,7 +373,7 @@
 					</div>
 					<div>
 						<h3>Aces</h3>
-						<h1>235</h1>
+						<h1 id="aces">235</h1>
 					</div>
 				</div>
 				<div class="scrollbar">
