--- a/webapp.html
+++ b/webapp.html
@@ -4,8 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/resetG.css">
 	<link rel="stylesheet" type="text/css" href="css/webapp.css">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
+	<script src="assets/js/jquery-1.9.1.js"></script>
+	<script src="assets/js/jquery-ui-1.10.3.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 </head>
 <body>
@@ -266,6 +268,18 @@
 			<section id="finales">
 				<div>
 					<div>
+						<nav>
+							<ul>
+								<li class="focus">Carriere</li>
+								<li>2013</li>
+								<li>2012</li>
+								<li>2011</li>
+								<li>2010</li>
+								<li>2009</li>
+							</ul>
+							<div class="rightSelect"><</div>
+							<div class="leftSelect"><</div>
+						</nav>
 						<div id="mapTitre"></div>
 					</div>
 					<div>
