--- a/webapp.html
+++ b/webapp.html
@@ -304,17 +304,21 @@
 					<div>
 						<nav>
 							<ul>
-								<li class="focus">Carriere</li>
-								<li>2013</li>
+								<li class="focus">2013</li>
 								<li>2012</li>
 								<li>2011</li>
 								<li>2010</li>
 								<li>2009</li>
+								<li>2008</li>
+								<li>2007</li>
+								<li>2006</li>
+								<li>2005</li>
+								<li>2004</li>
 							</ul>
 							<div class="rightSelect"><</div>
 							<div class="leftSelect"><</div>
 						</nav>
-						<div id="mapTitre"></div>
+						<div id="mapFinales"></div>
 					</div>
 					<div>
 						<h3>6 titres</h3>
@@ -325,17 +329,23 @@
 					<div class="surface">
 						<img src="img/terrainDur.png"/>
 						<div></div>
-						<div class="statsRounded dur" data-pourcent="30"></div>
+						<div class="dur statsNumber">
+							<h1>21</h1>
+						</div>
 					</div>
 					<div class="surface">
 						<img src="img/terrainClay.png"/>
 						<div class="left"></div>
-						<div class="statsRounded clay" data-pourcent="60"></div>
+						<div class="clay statsNumber">
+							<h1>21</h1>
+						</div>
 					</div>
 					<div class="surface">
 						<img src="img/terrainGrass.png"/>
 						<div></div>
-						<div class="statsRounded grass" data-pourcent="75"></div>
+						<div class="grass statsNumber">
+							<h1>21</h1>
+						</div>
 					</div>
 				</div>
 				<div class="scrollbar">
