--- a/webapp.html
+++ b/webapp.html
@@ -357,8 +357,7 @@
 				<div>
 					<nav>
 						<ul>
-							<li class="focus">Carriere</li>
-							<li>2013</li>
+							<li class="focus">2013</li>
 							<li>2012</li>
 							<li>2011</li>
 							<li>2010</li>
