--- a/index.html
+++ b/index.html
@@ -88,34 +88,34 @@
 
 			<div id="slider-three">
 				 <div>
-					<a href="index.html?Djokovic"><img id="imgDjoko" src="img/1_Novak_DJOKOVIC.png"  alt="" /></a>
+					<a href="webapp.html#/djokovic"><img id="imgDjoko" src="img/1_Novak_DJOKOVIC.png"  alt="" /></a>
   				</div>
   				<div>
-					<a href="index.html?Murray"><img id="imgdada" src="img/2_Andy_MURRAY.png" alt="" /></a>
+					<a href="webapp.html#/murray"><img id="imgdada" src="img/2_Andy_MURRAY.png" alt="" /></a>
   				</div>
   				<div>
-					<a href="index.html?Federrer"><img id="imgFederer" src="img/3_Roger_FEDERER.png" alt="" /></a>
+					<a href="webapp.html#/federrer"><img id="imgFederer" src="img/3_Roger_FEDERER.png" alt="" /></a>
+  				</div>
+  				<div>webapp.html#/djokovic
+					<a href="webapp.html#/nadal"><img id="imgNadal" src="img/4_Rafael_NADAL.png" alt="" /></a>
+  				</div>
+   				<div>
+					<a href="webapp.html#/ferrer"><img id="imgFerrer"  src="img/5_David_FERRER.png" alt="" /></a>
+  				</div>
+   				<div>
+					<a href="webapp.html#/berdych"><img id="imgBerdych"  src="img/6_Tomas_BERDYCH.png" alt="" /></a>
   				</div>
   				<div>
-					<a href="index.html?Nadal"><img id="imgNadal" src="img/4_Rafael_NADAL.png" alt="" /></a>
+					<a href="webapp.html#/totro"><img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" /></a>
   				</div>
    				<div>
-					<a href="index.html?Ferrer"><img id="imgFerrer"  src="img/5_David_FERRER.png" alt="" /></a>
+					<a href="webapp.html#/tsonga"><img id="imgTsonga" src="img/8_Jo-Wilfried_TSONGA.png" alt="" /></a>
   				</div>
    				<div>
-					<a href="index.html?Berdych"><img id="imgBerdych"  src="img/6_Tomas_BERDYCH.png" alt="" /></a>
-  				</div>
-  				<div>
-					<a href="index.html?Potro"><img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" /></a>
+					<a href="webapp.html#/gasquet"><img id="imgGasquet"   src="img/9_Richard_GASQUET.png" alt="" /></a>
   				</div>
    				<div>
-					<a href="index.html?Tsonga"><img id="imgTsonga" src="img/8_Jo-Wilfried_TSONGA.png" alt="" /></a>
-  				</div>
-   				<div>
-					<a href="index.html?Gasquet"><img id="imgGasquet"   src="img/9_Richard_GASQUET.png" alt="" /></a>
-  				</div>
-   				<div>
-					<a href="index.html?Wawrinka"><img id="imgWawrinka" src="img/10_Stanislas_WAWRINKA.png" alt="" /></a>
+					<a href="webapp.html#/wawrinka"><img id="imgWawrinka" src="img/10_Stanislas_WAWRINKA.png" alt="" /></a>
   				</div> 				
 
 			</div>
