--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
 	<script type="text/javascript" src="js/localscroll/jquery.scrollTo.js"></script>
     
 	<script type="text/javascript" src="js/lancement.js"></script><!-- permet le lancement de la fonction de scroll -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-41753328-1', 'tennisrankin.gs');
+	  ga('send', 'pageview');
+
+	</script>
 
 </head>
 <body>
