--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   				<div>
 					<a href="webapp.html#/federrer"><img id="imgFederer" src="img/3_Roger_FEDERER.png" alt="" /></a>
   				</div>
-  				<div>webapp.html#/djokovic
+  				<div>
 					<a href="webapp.html#/nadal"><img id="imgNadal" src="img/4_Rafael_NADAL.png" alt="" /></a>
   				</div>
    				<div>
@@ -115,7 +115,7 @@
 					<a href="webapp.html#/berdych"><img id="imgBerdych"  src="img/6_Tomas_BERDYCH.png" alt="" /></a>
   				</div>
   				<div>
-					<a href="webapp.html#/totro"><img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" /></a>
+					<a href="webapp.html#/delpotro"><img id="imgPotro"  src="img/7_Juan_Martin_DEL_POTRO.png" alt="" /></a>
   				</div>
    				<div>
 					<a href="webapp.html#/tsonga"><img id="imgTsonga" src="img/8_Jo-Wilfried_TSONGA.png" alt="" /></a>
