--- a/webapp.html
+++ b/webapp.html
@@ -393,7 +393,7 @@
 					</nav>
 				</div>
 				<div>
-					<div>
+					<!-- <div>
 						<h3>Points gagne suite a un retour de 1er service</h3>
 						<div class="statsRounded pgsr1s" data-pourcent="56"></div>
 					</div>
@@ -428,7 +428,7 @@
 					<div>
 						<h3>Aces</h3>
 						<h1>235</h1>
-					</div>
+					</div> -->
 				</div>
 				<div class="scrollbar">
 					<div>
